@@ -1,16 +1,19 @@
 package run.halo.app.theme;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import com.github.zafarkhaja.semver.Version;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
@@ -18,6 +21,7 @@ import reactor.test.StepVerifier;
 import run.halo.app.extension.ConfigMap;
 import run.halo.app.infra.ExternalUrlSupplier;
 import run.halo.app.infra.SystemConfigurableEnvironmentFetcher;
+import run.halo.app.infra.SystemVersionSupplier;
 import run.halo.app.theme.finders.vo.SiteSettingVo;
 
 /**
@@ -30,6 +34,10 @@ import run.halo.app.theme.finders.vo.SiteSettingVo;
 public class SiteSettingVariablesAcquirerTest {
     @Mock
     private ExternalUrlSupplier externalUrlSupplier;
+
+    @Mock
+    private SystemVersionSupplier systemVersionSupplier;
+
     @Mock
     private SystemConfigurableEnvironmentFetcher environmentFetcher;
 
@@ -37,23 +45,29 @@ public class SiteSettingVariablesAcquirerTest {
     private SiteSettingVariablesAcquirer siteSettingVariablesAcquirer;
 
     @Test
-    void acquire() throws URISyntaxException {
-        ConfigMap configMap = new ConfigMap();
+    void acquireWhenExternalUrlSet() throws MalformedURLException {
+        var configMap = new ConfigMap();
         configMap.setData(Map.of());
 
-        URI uri = new URI("https://halo.run");
-        when(externalUrlSupplier.get()).thenReturn(uri);
+        var url = new URL("https://halo.run");
+        when(externalUrlSupplier.getURL(any())).thenReturn(url);
+        when(systemVersionSupplier.get()).thenReturn(Version.parse("0.0.0-alpha.1"));
         when(environmentFetcher.getConfigMap()).thenReturn(Mono.just(configMap));
 
-        siteSettingVariablesAcquirer.acquire(Mockito.mock(ServerWebExchange.class))
+        siteSettingVariablesAcquirer.acquire(mock(ServerWebExchange.class))
             .as(StepVerifier::create)
             .consumeNextWith(result -> {
                 assertThat(result).containsKey("site");
                 assertThat(result.get("site")).isInstanceOf(SiteSettingVo.class);
-                assertThat((SiteSettingVo) result.get("site"))
+                var site = (SiteSettingVo) result.get("site");
+                assertThat(site)
                     .extracting(SiteSettingVo::getUrl)
-                    .isEqualTo(uri);
+                    .isEqualTo(url);
+                assertThat(site)
+                    .extracting(SiteSettingVo::getVersion)
+                    .isEqualTo("0.0.0-alpha.1");
             })
             .verifyComplete();
+        verify(externalUrlSupplier).getURL(any());
     }
 }
